Sat Jun 28 20:29:03 2014  Simon Baird  <simon.baird@gmail.com>

	* ext/bigdecimal/lib/bigdecimal/math.rb (BigMath#PI): change error
	  message about zero or negative precision for clarity and
	  consistency with other methods.  [GH-644]

Sat Jun 28 15:32:57 2014  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/utils.rb (create_listeners): Close socket objects.

Sat Jun 28 13:58:48 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (setup_exception): should not overwrite SystemStackError
	  backtrace if set already.  [ruby-core:63377] [Feature #6216]

	* eval.c (setup_exception): get rid of method calls before raising
	  stack overflow, not to cause stack overflow again.

	* defs/id.def: add IDs for backtraces.

Sat Jun 28 04:08:22 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/mailto.rb: update to latest specs, RFC 6068 and HTML5.

	* lib/uri/mailto.rb (HEADER_PATTERN): removed.

	* lib/uri/mailto.rb (HEADER_REGEXP): use RFC 6068 hfields.

	* lib/uri/mailto.rb (EMAIL_REGEXP): use HTML5 email regexp.

	* lib/uri/mailto.rb (URI::MailTo.build): support multiple to addresses.

	* lib/uri/mailto.rb (URI::MailTo#initialize): Support multiple to
	  addresses. Don't check with regexp, only split.

	* lib/uri/mailto.rb (URI::MailTo#check_to): verify by matching
	  URI path-rootless and HTML5 email regexp with unescaped one.

	* lib/uri/mailto.rb (URI::MailTo#check_headers): verify only by
	  HEADER_REGEXP.

	* lib/uri/mailto.rb (URI::MailTo#set_headers): don't check by
	  HEADER_REGEXP, only split it.

Sat Jun 28 00:35:10 2014  Lauri Tirkkonen  <lotheac@iki.fi>

	* tool/mkconfig.rb: fix empty RbConfig::CONFIG["prefix"] when
	  configured --with-rubyarchprefix, remove prefix from rubyarchdir
	  after expansion for the case it does not start with '$(prefix)'.
	  [fix GH-643]

Fri Jun 27 15:20:12 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rubygems/test_case.rb: rescue Gem::LoadError in Gem::TestCase.