@@ -1,2 +1,3 @@
 require 'mkmf'
+have_struct_member("struct stat", "st_birthtimespec", "sys/stat.h")
 create_makefile('pathname')
